--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -25,7 +25,7 @@ $grey:   #aaa;
 $black:  #111;
 
 // Color variables
-$primary-color: seagreen;
+$primary-color: #4C90D4;
 $secondary-color: #233E5B;
 $tertiary-color: #aaa;
 $link-color: $primary-color;
@@ -51,5 +51,4 @@ $line-height: 44px; // Consistent height for buttons, inputs etc.
 TYPE SETTINGS
 ***************/
 
-$sans-serif: "Open Sans", Helvetica, Arial, sans-serif;
-$serif: "PT Serif", Georgia, Times, serif;
+$font: "Open Sans", AppleSDGothicNeo-Light, Helvetica, Arial, sans-serif;
