--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -51,4 +51,4 @@ $line-height: 44px; // Consistent height for buttons, inputs etc.
 TYPE SETTINGS
 ***************/
 
-$font: "Open Sans", AppleSDGothicNeo-Light, Helvetica, Arial, sans-serif;
+$font:  nanumbarunpenr, Helvetica, Arial, sans-serif;
