--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,10 +4,6 @@
 // Reset using Normalize
 @import "normalize";
 
-// Import fonts from Google
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
-@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
-
 // Site configuration
 @import "config"; 
 
@@ -30,3 +26,4 @@
 
 // If IE support is needed you can add them here or create another stylesheet for specific IE fixes
 
+@import "kevins"
