--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
             </a></li>
             {% endif %}
             {% if site.social.instagram %}
-            <li><a href="https://instagram/{{ site.social.instagram }}">
+            <li><a href="https://www.instagram.com/{{ site.social.instagram }}">
                   <i class="fa fa-instagram" title="Instagram"></i>
             </a></li>
             {% endif %} 
